--- a/bin/template/dis_record.html
+++ b/bin/template/dis_record.html
@@ -25,6 +25,7 @@
                     <span class="buy_date">{{oneDistribute.create_time}}</span>
                     <div class="clearfix"></div>
                 </div>
+                <div class="clearfix"></div>
             </li>
         </ul>
     </section>
