--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -26,7 +26,7 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="eye_sight_delete">
-                    <span class="edit_btn" v-bind:data-index="index" v-on:click="unbindEyeSight">解绑</span>
+                    <span class="edit_btn" v-bind:data-index="index" v-on:click="unbindEyeSight()">解绑</span>
                 </div>
                 <div class="clearfix"></div>
             </li>
