修改用户注册

--- a/bin/template/register.html
+++ b/bin/template/register.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>视光师注册</title>
+    <title>新用户注册</title>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
@@ -46,7 +46,7 @@
     </section>
 
     <section class="section_footer">
-        <span class="content_sub js_register">注册成为视光师</span>
+        <span class="content_sub js_register">注 册</span>
     </section>
 </div>
 
