修改注册逻辑

--- a/bin/template/register.html
+++ b/bin/template/register.html
@@ -52,7 +52,7 @@
         <dl class="hang">
             <dt>确认密码</dt>
             <dd>
-                <input class="text js_password_surc" type="text" placeholder="必填" maxlength="18" minlength="6"/>
+                <input class="text js_password_sure" type="text" placeholder="必填" maxlength="18" minlength="6"/>
             </dd>
         </dl>
     </section>
