修改密码控件

--- a/bin/template/register.html
+++ b/bin/template/register.html
@@ -46,13 +46,13 @@
         <dl class="hang">
             <dt>密码</dt>
             <dd>
-                <input class="text js_password" type="text" placeholder="必填" maxlength="18" minlength="6"/>
+                <input class="text js_password" type="password" placeholder="必填" maxlength="18" minlength="6"/>
             </dd>
         </dl>
         <dl class="hang">
             <dt>确认密码</dt>
             <dd>
-                <input class="text js_password_sure" type="text" placeholder="必填" maxlength="18" minlength="6"/>
+                <input class="text js_password_sure" type="password" placeholder="必填" maxlength="18" minlength="6"/>
             </dd>
         </dl>
     </section>
